Add Tegra camera driver

--- a/drivers/gpu/drm/tegra/Makefile
+++ b/drivers/gpu/drm/tegra/Makefile
@@ -19,4 +19,4 @@ tegra-drm-y := \
 
 tegra-drm-y += trace.o
 
-obj-$(CONFIG_DRM_TEGRA) += tegra-drm.o
+obj-$(CONFIG_DRM_TEGRA) += tegra-drm.o camera/
