--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.0-rc3 Kernel Configuration
+# Linux/arm64 4.14.0-rc6 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -3647,6 +3647,9 @@ CONFIG_DRM_MSM_DSI_14NM_PHY=y
 CONFIG_DRM_TEGRA=y
 CONFIG_DRM_TEGRA_DEBUG=y
 CONFIG_DRM_TEGRA_STAGING=y
+CONFIG_DRM_TEGRA_CAMERA_IMX219=y
+CONFIG_DRM_TEGRA_CAMERA_IMX208=y
+CONFIG_DRM_TEGRA_CAMERA_AD5823=y
 CONFIG_DRM_PANEL=y
 
 #
@@ -5829,7 +5832,7 @@ CONFIG_ARCH_HAS_RESET_CONTROLLER=y
 CONFIG_RESET_CONTROLLER=y
 # CONFIG_RESET_ATH79 is not set
 CONFIG_RESET_BERLIN=y
-# CONFIG_RESET_HSDK_V1 is not set
+# CONFIG_RESET_HSDK is not set
 # CONFIG_RESET_IMX7 is not set
 # CONFIG_RESET_LANTIQ is not set
 # CONFIG_RESET_LPC18XX is not set
@@ -6418,6 +6421,7 @@ CONFIG_PROBE_EVENTS=y
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 # CONFIG_TRACE_EVAL_MAP_FILE is not set
 CONFIG_TRACING_EVENTS_GPIO=y
+# CONFIG_DMA_API_DEBUG is not set
 
 #
 # Runtime Testing
@@ -6438,17 +6442,16 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_TEST_UUID is not set
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_TEST_HASH is not set
-# CONFIG_DMA_API_DEBUG is not set
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_USER_COPY is not set
 # CONFIG_TEST_BPF is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
-CONFIG_MEMTEST=y
 # CONFIG_TEST_STATIC_KEYS is not set
-# CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_TEST_KMOD is not set
+CONFIG_MEMTEST=y
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
