--- a/arch/arm64/boot/dts/nvidia/tegra210-smaug.dts
+++ b/arch/arm64/boot/dts/nvidia/tegra210-smaug.dts
@@ -9,6 +9,7 @@
 #include <dt-bindings/thermal/tegra210-trips.h>
 
 #include "tegra210.dtsi"
+#include "tegra210-smaug-camera.dtsi"
 #include "tegra210-smaug-sysedp.dtsi"
 
 / {
@@ -100,6 +101,7 @@
 		vdd-cpu-supply = <&max77621_cpu>;
 		vdd-core-supply = <&ppvar_soc>;
 	};
+	
 	wifi: wifi_bcm4354 {
 		compatible = "bcm,bcm4354";
 		interrupt-parent = <&gpio>;
@@ -107,7 +109,15 @@
 		wl_reg_on = <&gpio TEGRA_GPIO(H, 1) GPIO_ACTIVE_HIGH>;
 		wl_host_wake = <&gpio TEGRA_GPIO(H, 2) IRQ_TYPE_LEVEL_HIGH>;
 		nvidia,pmc-wakeup = <&pmc
-		PMC_WAKE_TYPE_EVENT 8 PMC_TRIGGER_TYPE_HIGH>;
+			PMC_WAKE_TYPE_EVENT 8 PMC_TRIGGER_TYPE_HIGH>;
+	};
+	bt_bcm4354 {
+		compatible = "bcm,bt-bcm4354";
+		bt_reg_on-gpios = <&gpio TEGRA_GPIO(H, 4) GPIO_ACTIVE_LOW>;
+		bt_host_wake-gpios = <&gpio TEGRA_GPIO(H, 5) GPIO_ACTIVE_HIGH>;
+		bt_ext_wake-gpios = <&gpio TEGRA_GPIO(H, 3) GPIO_ACTIVE_LOW>;
+		nvidia,pmc-wakeup = <&pmc
+				PMC_WAKE_TYPE_EVENT 52 PMC_TRIGGER_TYPE_HIGH>;
 	};
 
 
