Add firmware files

--- a/.config
+++ b/.config
@@ -1120,10 +1120,12 @@ CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE="fw_bcmdhd.bin fw_bcmdhd_apsta.bin bcm4350c0.hcd nvidia/tegra210/xusb.bin nvidia/tegra210/vic04_ucode.bin"
+CONFIG_EXTRA_FIRMWARE="bcm4350c0.hcd fw_bcmdhd.bin nvidia/tegra210/xusb.bin nvidia/tegra210/vic.bin rt5677_elf_vad"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
+CONFIG_WANT_DEV_COREDUMP=y
 CONFIG_ALLOW_DEV_COREDUMP=y
+CONFIG_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_DEBUG_TEST_DRIVER_REMOVE is not set
@@ -1896,8 +1898,7 @@ CONFIG_SWPHY=y
 # CONFIG_AT803X_PHY is not set
 # CONFIG_BCM7XXX_PHY is not set
 # CONFIG_BCM87XX_PHY is not set
-CONFIG_BCM_NET_PHYLIB=y
-CONFIG_BROADCOM_PHY=y
+# CONFIG_BROADCOM_PHY is not set
 # CONFIG_CICADA_PHY is not set
 # CONFIG_CORTINA_PHY is not set
 # CONFIG_DAVICOM_PHY is not set
@@ -1950,7 +1951,7 @@ CONFIG_USB_NET_SMSC95XX=y
 CONFIG_USB_NET_NET1080=y
 CONFIG_USB_NET_PLUSB=y
 CONFIG_USB_NET_MCS7830=y
-CONFIG_USB_NET_RNDIS_HOST=y
+# CONFIG_USB_NET_RNDIS_HOST is not set
 CONFIG_USB_NET_CDC_SUBSET_ENABLE=y
 CONFIG_USB_NET_CDC_SUBSET=y
 # CONFIG_USB_ALI_M5632 is not set
@@ -1988,10 +1989,34 @@ CONFIG_WLAN_VENDOR_ATMEL=y
 # CONFIG_ATMEL is not set
 # CONFIG_AT76C50X_USB is not set
 CONFIG_WLAN_VENDOR_BROADCOM=y
-# CONFIG_B43 is not set
+CONFIG_B43=y
+CONFIG_B43_BCMA=y
+CONFIG_B43_SSB=y
+CONFIG_B43_BUSES_BCMA_AND_SSB=y
+# CONFIG_B43_BUSES_BCMA is not set
+# CONFIG_B43_BUSES_SSB is not set
+CONFIG_B43_PCI_AUTOSELECT=y
+CONFIG_B43_PCICORE_AUTOSELECT=y
+CONFIG_B43_SDIO=y
+CONFIG_B43_BCMA_PIO=y
+CONFIG_B43_PIO=y
+CONFIG_B43_PHY_G=y
+CONFIG_B43_PHY_N=y
+CONFIG_B43_PHY_LP=y
+CONFIG_B43_PHY_HT=y
+CONFIG_B43_LEDS=y
+CONFIG_B43_HWRNG=y
+# CONFIG_B43_DEBUG is not set
 # CONFIG_B43LEGACY is not set
-# CONFIG_BRCMSMAC is not set
-# CONFIG_BRCMFMAC is not set
+CONFIG_BRCMUTIL=y
+CONFIG_BRCMSMAC=y
+CONFIG_BRCMFMAC=y
+CONFIG_BRCMFMAC_PROTO_BCDC=y
+CONFIG_BRCMFMAC_SDIO=y
+# CONFIG_BRCMFMAC_USB is not set
+# CONFIG_BRCMFMAC_PCIE is not set
+CONFIG_BRCM_TRACING=y
+CONFIG_BRCMDBG=y
 CONFIG_WLAN_VENDOR_CISCO=y
 CONFIG_WLAN_VENDOR_INTEL=y
 # CONFIG_IPW2100 is not set
@@ -2045,19 +2070,19 @@ CONFIG_ZD1211RW=y
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_WLAN_VENDOR_QUANTENNA=y
 # CONFIG_QTNFMAC_PEARL_PCIE is not set
-CONFIG_BCMDHD=m
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_SDIO=y
-CONFIG_BCM4354=m
-CONFIG_BCM4356=m
-CONFIG_BCM4358=m
+CONFIG_BCM4354=y
+CONFIG_BCM4356=y
+CONFIG_BCM4358=y
 CONFIG_BCMDHD_FW_PATH="/lib/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/etc/wifi/bcmdhd.cal"
-CONFIG_DHD_USE_STATIC_BUF=y
-CONFIG_DHD_USE_SCHED_SCAN=y
+# CONFIG_DHD_USE_STATIC_BUF is not set
+# CONFIG_DHD_USE_SCHED_SCAN is not set
 CONFIG_DHD_SET_RANDOM_MAC_VAL=0x001A11
 # CONFIG_DHD_OF_SUPPORT is not set
 # CONFIG_MAC80211_HWSIM is not set
-CONFIG_USB_NET_RNDIS_WLAN=y
+# CONFIG_USB_NET_RNDIS_WLAN is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -2779,6 +2804,8 @@ CONFIG_GPIO_MAX77620=y
 # USB GPIO expanders
 #
 # CONFIG_W1 is not set
+CONFIG_CHARGER_CROS_EC=y
+CONFIG_CHARGER_CROS_USB_PDHARGER_CROS_USB_PD=y
 # CONFIG_POWER_AVS is not set
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_AS3722 is not set
@@ -3140,9 +3167,10 @@ CONFIG_SSB_POSSIBLE=y
 #
 CONFIG_SSB=y
 CONFIG_SSB_SPROM=y
+CONFIG_SSB_BLOCKIO=y
 CONFIG_SSB_PCIHOST_POSSIBLE=y
 CONFIG_SSB_PCIHOST=y
-# CONFIG_SSB_B43_PCI_BRIDGE is not set
+CONFIG_SSB_B43_PCI_BRIDGE=y
 CONFIG_SSB_SDIOHOST_POSSIBLE=y
 CONFIG_SSB_SDIOHOST=y
 # CONFIG_SSB_DEBUG is not set
@@ -3151,6 +3179,7 @@ CONFIG_SSB_DRIVER_PCICORE=y
 # CONFIG_SSB_DRIVER_GPIO is not set
 CONFIG_BCMA_POSSIBLE=y
 CONFIG_BCMA=y
+CONFIG_BCMA_BLOCKIO=y
 CONFIG_BCMA_HOST_PCI_POSSIBLE=y
 CONFIG_BCMA_HOST_PCI=y
 # CONFIG_BCMA_HOST_SOC is not set
@@ -3647,9 +3676,9 @@ CONFIG_DRM_MSM_DSI_14NM_PHY=y
 CONFIG_DRM_TEGRA=y
 CONFIG_DRM_TEGRA_DEBUG=y
 CONFIG_DRM_TEGRA_STAGING=y
-CONFIG_DRM_TEGRA_CAMERA_IMX219=y
-CONFIG_DRM_TEGRA_CAMERA_IMX208=y
-CONFIG_DRM_TEGRA_CAMERA_AD5823=y
+# CONFIG_DRM_TEGRA_CAMERA_IMX219 is not set
+# CONFIG_DRM_TEGRA_CAMERA_IMX208 is not set
+# CONFIG_DRM_TEGRA_CAMERA_AD5823 is not set
 CONFIG_DRM_PANEL=y
 
 #
@@ -5093,12 +5122,6 @@ CONFIG_TYPEC_TCPCI=y
 CONFIG_TYPEC_FUSB302=y
 # CONFIG_PI433 is not set
 # CONFIG_GOLDFISH is not set
-CONFIG_CHROME_PLATFORMS=y
-CONFIG_CROS_EC_CHARDEV=y
-CONFIG_CROS_EC_LPC=y
-CONFIG_CROS_EC_LPC_MEC=y
-CONFIG_CROS_EC_PROTO=y
-CONFIG_CROS_KBD_LED_BACKLIGHT=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -5966,7 +5989,13 @@ CONFIG_DMI_SYSFS=y
 CONFIG_QCOM_SCM=y
 CONFIG_QCOM_SCM_64=y
 CONFIG_HAVE_ARM_SMCCC=y
-# CONFIG_GOOGLE_FIRMWARE is not set
+CONFIG_GOOGLE_FIRMWARE=y
+CONFIG_GOOGLE_COREBOOT_TABLE=y
+CONFIG_GOOGLE_COREBOOT_TABLE_ACPI=y
+CONFIG_GOOGLE_COREBOOT_TABLE_OF=y
+CONFIG_GOOGLE_MEMCONSOLE=y
+CONFIG_GOOGLE_MEMCONSOLE_COREBOOT=y
+CONFIG_GOOGLE_VPD=y
 
 #
 # EFI (Extensible Firmware Interface) Support
