--- a/.config
+++ b/.config
@@ -1120,7 +1120,7 @@ CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE="bcm4350c0.hcd fw_bcmdhd.bin nvidia/tegra210/xusb.bin nvidia/tegra210/vic.bin rt5677_elf_vad"
+CONFIG_EXTRA_FIRMWARE="bcm4350c0.hcd fw_bcmdhd.bin nvidia/tegra210/xusb.bin nvidia/tegra210/vic04_ucode.bin rt5677_elf_vad"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 CONFIG_WANT_DEV_COREDUMP=y
@@ -2804,8 +2804,6 @@ CONFIG_GPIO_MAX77620=y
 # USB GPIO expanders
 #
 # CONFIG_W1 is not set
-CONFIG_CHARGER_CROS_EC=y
-CONFIG_CHARGER_CROS_USB_PDHARGER_CROS_USB_PD=y
 # CONFIG_POWER_AVS is not set
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_AS3722 is not set
@@ -5122,6 +5120,12 @@ CONFIG_TYPEC_TCPCI=y
 CONFIG_TYPEC_FUSB302=y
 # CONFIG_PI433 is not set
 # CONFIG_GOLDFISH is not set
+CONFIG_CHROME_PLATFORMS=y
+CONFIG_CROS_EC_CHARDEV=y
+CONFIG_CROS_EC_LPC=y
+CONFIG_CROS_EC_LPC_MEC=y
+CONFIG_CROS_EC_PROTO=y
+CONFIG_CROS_KBD_LED_BACKLIGHT=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
