--- a/.config
+++ b/.config
@@ -2510,7 +2510,7 @@ CONFIG_SPI_MASTER=y
 # CONFIG_SPI_BCM63XX is not set
 # CONFIG_SPI_BCM63XX_HSSPI is not set
 CONFIG_SPI_BCM_QSPI=y
-# CONFIG_SPI_BITBANG is not set
+CONFIG_SPI_BITBANG=y
 # CONFIG_SPI_CADENCE is not set
 # CONFIG_SPI_CLPS711X is not set
 # CONFIG_SPI_DESIGNWARE is not set
@@ -2549,7 +2549,7 @@ CONFIG_SPI_S3C64XX=y
 # CONFIG_SPI_ST_SSC4 is not set
 # CONFIG_SPI_SUN4I is not set
 # CONFIG_SPI_SUN6I is not set
-# CONFIG_SPI_TEGRA114 is not set
+CONFIG_SPI_TEGRA114=y
 # CONFIG_SPI_TEGRA20_SFLASH is not set
 # CONFIG_SPI_TEGRA20_SLINK is not set
 # CONFIG_SPI_THUNDERX is not set
@@ -3203,7 +3203,7 @@ CONFIG_MFD_AS3722=y
 # CONFIG_MFD_AXP20X_I2C is not set
 CONFIG_MFD_CROS_EC=y
 CONFIG_MFD_CROS_EC_I2C=y
-CONFIG_MFD_CROS_EC_SPI=y
+# CONFIG_MFD_CROS_EC_SPI is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9052_I2C is not set
@@ -3674,9 +3674,9 @@ CONFIG_DRM_MSM_DSI_14NM_PHY=y
 CONFIG_DRM_TEGRA=y
 CONFIG_DRM_TEGRA_DEBUG=y
 CONFIG_DRM_TEGRA_STAGING=y
-# CONFIG_DRM_TEGRA_CAMERA_IMX219 is not set
-# CONFIG_DRM_TEGRA_CAMERA_IMX208 is not set
-# CONFIG_DRM_TEGRA_CAMERA_AD5823 is not set
+CONFIG_DRM_TEGRA_CAMERA_IMX219=y
+CONFIG_DRM_TEGRA_CAMERA_IMX208=y
+CONFIG_DRM_TEGRA_CAMERA_AD5823=y
 CONFIG_DRM_PANEL=y
 
 #
@@ -5093,7 +5093,11 @@ CONFIG_NVEC_PAZ00=y
 # Android
 #
 # CONFIG_ASHMEM is not set
-# CONFIG_ION is not set
+CONFIG_ION=y
+# CONFIG_ION_SYSTEM_HEAP is not set
+# CONFIG_ION_CARVEOUT_HEAP is not set
+# CONFIG_ION_CHUNK_HEAP is not set
+# CONFIG_ION_CMA_HEAP is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_LNET is not set
@@ -5122,10 +5126,9 @@ CONFIG_TYPEC_FUSB302=y
 # CONFIG_GOLDFISH is not set
 CONFIG_CHROME_PLATFORMS=y
 CONFIG_CROS_EC_CHARDEV=y
-CONFIG_CROS_EC_LPC=y
-CONFIG_CROS_EC_LPC_MEC=y
+# CONFIG_CROS_EC_LPC is not set
 CONFIG_CROS_EC_PROTO=y
-CONFIG_CROS_KBD_LED_BACKLIGHT=y
+# CONFIG_CROS_KBD_LED_BACKLIGHT is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -5576,7 +5579,8 @@ CONFIG_MESON_SARADC=y
 # CONFIG_CCS811 is not set
 # CONFIG_IAQCORE is not set
 # CONFIG_VZ89X is not set
-# CONFIG_IIO_CROS_EC_SENSORS_CORE is not set
+CONFIG_IIO_CROS_EC_SENSORS_CORE=y
+CONFIG_IIO_CROS_EC_SENSORS=y
 
 #
 # Hid Sensor IIO Common
@@ -5704,6 +5708,7 @@ CONFIG_MESON_SARADC=y
 # CONFIG_CM3323 is not set
 # CONFIG_CM3605 is not set
 # CONFIG_CM36651 is not set
+# CONFIG_IIO_CROS_EC_LIGHT_PROX is not set
 # CONFIG_GP2AP020A00F is not set
 CONFIG_SENSORS_ISL29018=y
 # CONFIG_SENSORS_ISL29028 is not set
@@ -5777,6 +5782,7 @@ CONFIG_AK8975=y
 #
 # CONFIG_ABP060MG is not set
 # CONFIG_BMP280 is not set
+# CONFIG_IIO_CROS_EC_BARO is not set
 # CONFIG_HP03 is not set
 # CONFIG_MPL115_I2C is not set
 # CONFIG_MPL115_SPI is not set
